03_Kubernetes/ing-rw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb-rw-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/vpotapov(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: myweb
                port:
                  number: 80
